--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,15 @@ certifi==2019.9.11
 cffi==1.12.3
 Click==7.0
 colorama==0.4.1
+dnspython==1.16.0
+docutils==0.15.2
+eventlet==0.25.1
 Flask==1.1.1
 Flask-Login==0.4.1
 Flask-PyMongo==2.3.0
 Flask-RESTful==0.3.7
 Flask-SocketIO==4.2.1
 Flask-WTF==0.14.2
-gevent==1.4.0
 greenlet==0.4.15
 isort==4.3.21
 itsdangerous==1.1.0
@@ -19,9 +21,11 @@ Jinja2==2.10.1
 lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
+monotonic==1.5
 pycparser==2.19
 pylint==2.4.1
 pymongo==3.9.0
+pyserial==3.4
 python-engineio==3.11.1
 python-socketio==4.4.0
 pytz==2019.3
