--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,37 @@
-aniso8601==8.0.0
-argon2-cffi==19.1.0
-astroid==2.3.0
-certifi==2019.9.11
-cffi==1.13.2
-Click==7.0
-colorama==0.4.1
-Flask==1.1.1
-Flask-Login==0.4.1
-Flask-PyMongo==2.3.0
-Flask-RESTful==0.3.7
-Flask-SocketIO==4.2.1
-Flask-WTF==0.14.2
-gevent==1.4.0
-greenlet==0.4.15
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.10.3
-lazy-object-proxy==1.4.3
-MarkupSafe==1.1.1
-mccabe==0.6.1
-pycparser==2.19
-pylint==2.4.1
-pymongo==3.10.0
-python-engineio==3.11.1
-python-socketio==4.4.0
-pytz==2019.3
-six==1.13.0
-typed-ast==1.4.0
-Werkzeug==0.16.0
-wincertstore==0.2
-wrapt==1.11.2
-WTForms==2.2.1
+aniso8601>=8.0.0
+argon2-cffi>=19.2.0
+astroid>=2.3.3
+certifi>=2019.11.28
+cffi>=1.13.2
+Click>=7.0
+colorama>=0.4.3
+dnspython>=1.16.0
+docutils>=0.15.2
+eventlet>=0.25.1
+Flask>=1.1.1
+Flask-Login>=0.4.1
+Flask-PyMongo>=2.3.0
+Flask-RESTful>=0.3.7
+Flask-SocketIO>=4.2.1
+Flask-WTF>=0.14.2
+greenlet>=0.4.15
+isort>=4.3.21
+itsdangerous>=1.1.0
+Jinja2>=2.10.3
+lazy-object-proxy>=1.4.3
+MarkupSafe>=1.1.1
+mccabe>=0.6.1
+monotonic>=1.5
+pycparser>=2.19
+pylint>=2.4.4
+pymongo>=3.10.0
+pyserial>=3.4
+python-engineio>=3.11.1
+python-socketio>=4.4.0
+pytz>=2019.3
+six>=1.13.0
+typed-ast>=1.4.0
+Werkzeug>=0.16.0
+wincertstore>=0.2
+wrapt>=1.11.2
+WTForms>=2.2.1
