--- a/config.json
+++ b/config.json
@@ -12,12 +12,5 @@
         "log-in":"Zaloguj się",
         "message":"Musisz się zalogować by uzyskać dostęp do tej strony"
     },
-    "secret-key":"\\xd7w7\\x04\\r\\xfc/q\\x1a\\x9b&",
-    "interface": {
-        "type":"serial",
-        "baudrate":115200,
-        "port": "/dev/serial0",
-        "encoding": "utf-8"
-    },
-    "manufacturer-code": "18"
+    "secret-key":"\\xd7w7\\x04\\r\\xfc/q\\x1a\\x9b&"
 }
