--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi>=2019.11.28
 cffi>=1.13.2
 Click>=7.0
 colorama>=0.4.3
+cryptography>=2.8
 dnspython>=1.16.0
 docutils>=0.15.2
 eventlet>=0.25.1
@@ -13,6 +14,7 @@ Flask-Login>=0.4.1
 Flask-PyMongo>=2.3.0
 Flask-RESTful>=0.3.7
 Flask-SocketIO>=4.2.1
+flask-talisman>=0.7.0
 Flask-WTF>=0.14.2
 greenlet>=0.4.15
 isort>=4.3.21
