--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ argon2-cffi>=19.2.0
 astroid>=2.3.3
 certifi>=2019.11.28
 cffi>=1.13.2
+chardet>=3.0.4
 Click>=7.0
 colorama>=0.4.3
 cryptography>=2.8
+DateTimeRange>=0.6.1
 dnspython>=1.16.0
-docutils>=0.15.2
+docutils>=0.16
 eventlet>=0.25.1
 Flask>=1.1.1
 Flask-Login>=0.4.1
@@ -22,17 +24,20 @@ itsdangerous>=1.1.0
 Jinja2>=2.10.3
 lazy-object-proxy>=1.4.3
 MarkupSafe>=1.1.1
+mbstrdecoder>=0.8.4
 mccabe>=0.6.1
 monotonic>=1.5
 pycparser>=2.19
 pylint>=2.4.4
-pymongo>=3.10.0
+pymongo>=3.10.1
 pyserial>=3.4
-python-engineio>=3.11.1
+python-dateutil>=2.8.1
+python-engineio>=3.11.2
 python-socketio>=4.4.0
 pytz>=2019.3
-six>=1.13.0
-typed-ast>=1.4.0
+six>=1.14.0
+typed-ast>=1.4.1
+typepy>=0.6.4
 Werkzeug>=0.16.0
 wincertstore>=0.2
 wrapt>=1.11.2
