fix bandit check

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,5 +26,5 @@ jobs:
     - name: Black Code Formatter
       uses: lgeiger/black-action@v1.0.1
     - name: Bandit Security Linter
-      uses: uses: jpetrucciani/bandit-check@master
+      uses: jpetrucciani/bandit-check@master
 
