--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -25,6 +25,8 @@ jobs:
           ${{ runner.os }}-pip-
     - name: Black Code Formatter
       uses: lgeiger/black-action@v1.0.1
+      with:
+        args: ". -t py38"
     - name: Bandit Security Linter
       uses: jpetrucciani/bandit-check@master
 
