--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
-      - name: Install dependencies
+      - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          bash ./install.sh < printf 'n\ny\ny\nadmin\nadmin\n'
       - uses: actions/cache@v1
         with:
           path: ~/.cache/pip
