--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          bash ./install.sh < printf 'n\ny\ny\nadmin\nadmin\n'
+          printf 'n\ny\ny\nadmin\nadmin\n' | bash ./install.sh
       - uses: actions/cache@v1
         with:
           path: ~/.cache/pip
