--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -43,13 +43,17 @@ jobs:
       - name: "check if branch is versioned"
         shell: bash
         run: |
-          if [[ ${{ github.GITHUB_REF }} ~= [\d\.\-{dev}]* ]]; then 
+          if [[ "$GITHUB_REF" ~= [\d\.\-{dev}]* ]]; then 
           echo ::set-output name=VERSIONED::"true"; else
           echo ::set-output name=VERSIONED::"false"
+        env:
+          GITHUB_REF: ${{ github.GITHUB_REF }}
       - name: Automatically set dev version
         if: steps.vars.outputs.VERSIONED
         run: |
-          echo ::set-env name=CHERRYDOOR_VERSION::$(echo $(echo ${{ github.GITHUB_REF }} | egrep -woi "([0-9\.{dev}\-]+)" && git rev-list master.. --count) | tr -d " ")
+          echo ::set-env name=CHERRYDOOR_VERSION::$(echo $(echo "$GITHUB_REF" | egrep -woi "([0-9\.{dev}\-]+)" && git rev-list master.. --count) | tr -d " ")
+        env:
+          GITHUB_REF: ${{ github.GITHUB_REF }}
       - name: Build and publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
