--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -32,8 +32,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: |
-          git fetch --prune --unshallow
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
@@ -42,7 +40,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
-      - name: "check if branch is versioned"
+      - name: generate build number
+        uses: zyborg/gh-action-buildnum@v1
+        with:
+          gist_token: ${{ secrets.GIST_TOKEN }}
+          version_key: ${{ github.ref }}
+          set_env: true
+      - name: check if branch is versioned
         run: |
           if [[ "$GITHUB_REF" =~ ([\d\.{dev}\-]{2,}) ]]; then 
           echo ::set-output name=VERSIONED::'true' && echo "branch is versioned"; else
@@ -52,7 +56,7 @@ jobs:
       - name: Automatically set dev version
         if: steps.versioned.outputs.VERSIONED
         run: |
-          echo ::set-env name=CHERRYDOOR_VERSION::$(echo $(echo "$GITHUB_REF" | egrep -woi "([0-9\.{dev}\-]+)" && git rev-list origin/master.. --count) | tr -d " ")
+          echo ::set-env name=CHERRYDOOR_VERSION::$(echo $(echo "$GITHUB_REF" | egrep -woi "([0-9\.{dev}\-]+)" && echo "$BUILDNUM_FOR_VERSION") | tr -d " ")
       - name: Build and publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
