--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           if [[ "$GITHUB_REF" =~ ([\d\.{dev}\-]{2,}) ]]; then 
           echo ::set-output name=VERSIONED::'true' && echo "branch is versioned"; else
-          echo ::set-output name=VERSIONED::'false' && ehco "branch is not versioned"; fi
+          echo ::set-output name=VERSIONED::'false' && echo "branch is not versioned"; fi
         shell: bash
         id: versioned
       - name: Automatically set dev version
