--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,7 +15,7 @@ jobs:
         - name: Set up Python
           uses: actions/setup-python@v1
           with:
-            python-version: "3.x"
+            python-version: '3.x'
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
@@ -45,7 +45,7 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
-            tag_name: ${{ format("v{0}", steps.version.outputs.version_build_number) }}
-            release_name: ${{ format("v{0}", steps.version.outputs.version_build_number) }}
+            tag_name: ${{ format('v{0}', steps.version.outputs.version_build_number) }}
+            release_name: ${{ format('v{0}', steps.version.outputs.version_build_number) }}
             draft: false
             prerelease: true
