--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,7 +37,7 @@ jobs:
             TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
           run: |
             python setup.py sdist bdist_wheel
-            twine upload dist/*
+            twine upload --skip-existing dist/* 
         - name: Create Release
           if: ${{ contains(github.ref, 'master') }}
           id: create_release
@@ -48,4 +48,4 @@ jobs:
             tag_name: ${{ format('v{0}', steps.version.outputs.version_build_number) }}
             release_name: ${{ format('v{0}', steps.version.outputs.version_build_number) }}
             draft: false
-            prerelease: true
+            prerelease: ${{ contains(github.ref, 'dev') }}
