--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,7 +28,7 @@ jobs:
             version_key: ${{ github.ref }}
             set_env: true
         - name: Automatically set dev version
-          if: ${{ contains(github.ref, 'master') }}
+          if: ${{ !contains(github.ref, 'master') }}
           run: |
             echo ::set-env name=CHERRYDOOR_VERSION::$(echo $(echo "$GITHUB_REF" | egrep -woi "([0-9\.{dev}\-]+)" && echo "$BUILDNUM_FOR_VERSION") | tr -d " ")
         - name: Build and publish
@@ -39,7 +39,7 @@ jobs:
             python setup.py sdist bdist_wheel
             twine upload --skip-existing dist/* 
         - name: Create Release
-          if: ${{ contains(github.ref, 'master') }}
+          if: ${{ !contains(github.ref, 'master') }}
           id: create_release
           uses: actions/create-release@v1
           env:
