--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,7 +16,14 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: "3.x"
-      - name: Install dependencies
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
@@ -46,7 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: env.PUBLISHED_VERSION)
+          tag_name: ${{ env.PUBLISHED_VERSION) }}
           prerelease: ${{ contains(github.ref, 'dev') }}
           files: |
             dist/*.whl
