--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -12,20 +12,22 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
-      - name: Install
-        run: |
-          python -m pip install --upgrade pip
-          printf 'n\ny\ny\nadmin\nadmin\n' | bash ./install.sh
-      - uses: actions/cache@v1
+      - uses: actions/cache@v2
+        id: cache
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+      - name: Install
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          python -m pip install --upgrade pip
+          printf 'n\ny\ny\nadmin\nadmin\n' | bash ./install.sh
+
       - name: Black Code Formatter
         uses: lgeiger/black-action@v1.0.1
         with:
           args: ". -t py38 --check"
       - name: Bandit Security Linter
         uses: jpetrucciani/bandit-check@master
- 
