fix publish workflow

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -53,7 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.PUBLISHED_VERSION) }}
+          tag_name: ${{ env.PUBLISHED_VERSION }}
           prerelease: ${{ contains(github.ref, 'dev') }}
           files: |
             dist/*.whl
