--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -56,7 +56,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ format('v{0}', env.PUBLISHED_VERSION) }}
+          tag_name: ${{ env.PUBLISHED_VERSION }}
           prerelease: ${{ contains(github.ref, 'dev') }}
           body: ${{ steps.changelog.outputs.changelog }}
           files: |
