--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601>=8.0.0
+aioserial>=1.3.0
 argon2-cffi>=19.2.0
 astroid>=2.3.3
 certifi>=2019.11.28
@@ -43,3 +44,4 @@ wincertstore>=0.2
 wrapt>=1.11.2
 WTForms>=2.2.1
 elevate>=0.1.3
+motor>=2.1.0
