--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.9
       - uses: actions/cache@v2
         id: cache
         with:
@@ -24,10 +24,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           printf 'n\ny\ny\nadmin\nadmin\n' | bash ./install.sh
-
-      - name: Black Code Formatter
-        uses: lgeiger/black-action@v1.0.1
+      - name: Check files using the black formatter
+        uses: rickstaa/action-black@v1
+        id: action_black
         with:
-          args: ". -t py38 --check"
+          black_args: ". -t py39"
+      - name: Annotate diff changes using reviewdog
+        if: steps.action_black.outputs.is_formatted == 'true'
+        uses: reviewdog/action-suggester@v1
+        with:
+          tool_name: blackfmt
       - name: Bandit Security Linter
         uses: jpetrucciani/bandit-check@master
